Fixes z-index.

--- a/sass/_commentContent.scss
+++ b/sass/_commentContent.scss
@@ -54,6 +54,7 @@
 			.reply {
 				@include buttonReset;
 				color: inherit;
+				z-index: 1;
 
 				&:hover {
 					transform: scale(0.9);
